# axon_agent

./: .dockerignore  .env.example  .gitignore  .secrets.baseline  .tool-versions  Dockerfile  README.md  config.example.yml  config.yml  docker-compose.yml  firestore.indexes.json  firestore.rules  pyproject.toml  uv.toml
.github/: labeler.yml
.github/workflows/: ci.yml  deploy.yml  labeler.yml  lint-fix.yml  publish.yml  release.yml
prompts/: system_prompt.md
src/axon/: __init__.py  __main__.py  exceptions.py  main.py
src/axon/agent/: __init__.py  context.py  loop.py
src/axon/config/: __init__.py  settings.py
src/axon/di/: __init__.py  container.py
src/axon/llm/: __init__.py  fallback.py  groq_client.py  openrouter_client.py  transcription.py
src/axon/logging/: __init__.py  setup.py
src/axon/memory/: __init__.py  db.py  models.py  repositories.py
src/axon/skills/: __init__.py  loader.py  mcp_adapter.py
src/axon/telegram/: __init__.py  bot.py  handlers.py
src/axon/tools/: __init__.py  base.py  get_current_time.py  gog.py  registry.py
src/helix/: __init__.py  __main__.py  exceptions.py  main.py
src/helix/agent/: __init__.py  loop.py
src/helix/config/: __init__.py  settings.py
src/helix/di/: __init__.py  container.py
src/helix/llm/: __init__.py  base.py  embeddings.py  fallback.py  groq_client.py  openrouter_client.py  transcription.py  tts.py  vision.py
src/helix/logging/: __init__.py
src/helix/memory/: __init__.py  db.py  document_repository.py  expense_repository.py  habit_repository.py  models.py  reminder_repository.py  repositories.py  routine_repository.py  todo_repository.py  voice_note_repository.py
src/helix/scheduler/: __init__.py  service.py
src/helix/skills/: __init__.py  loader.py  mcp_adapter.py
src/helix/telegram/: __init__.py  bot.py  handlers.py
src/helix/tools/: __init__.py  base.py  daily_briefing.py  docker_manage.py  document_qa.py  expense_tracker.py  get_current_time.py  gog.py  habit_tracker.py  homeserver_health.py  note.py  pihole.py  registry.py  reminder.py  smart_routine.py  system_info.py  todo.py  uptime_monitor.py  url_fetch.py  voice_note.py  weather.py  web_search.py
tests/: conftest.py
tests/unit/: test_config.py  test_container.py
tests/unit/agent/: test_loop.py
tests/unit/llm/: test_fallback.py  test_openrouter_client.py  test_transcription.py  test_tts.py
tests/unit/memory/: test_expense_repository.py  test_habit_repository.py  test_reminder_model.py  test_reminder_repository.py  test_repositories.py  test_todo_repository.py
tests/unit/scheduler/: test_service.py
tests/unit/skills/: test_loader.py  test_mcp_adapter.py
(+16 files in other folders)
